--- a/TO DO LIST/style.css
+++ b/TO DO LIST/style.css
@@ -1,12 +1,12 @@
 body {
-    background-color: #20235d;
+    background-color: #FFF8DC;
     height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 .todo-app {
     max-width: 600px;
-    background-color: hsl(0, 0%, 100%);
+    background-color: #FAFAD2;
     padding: 20px 30px 50px;
     margin: 120px auto 15px;
     border-radius: 15px;
@@ -26,16 +26,16 @@ form {
 input[type="text"] {
     width: 70%;
     padding: 20px;
-    border: 4px solid #632fff;
+    border: 6px solid #7CFC00;
     border-radius: 15px;
     font-size: 1rem;
     margin-left: 20px;
 }
 
 .btn {
-    background-color: #632fff;
-    border: none;
-    color: white;
+    background-color: rgb(172, 120, 232);
+    border: 4px solid #7CFC00;
+    color: black;
     padding: 20px 30px;
     cursor: pointer;
     border-radius: 15px;
@@ -43,7 +43,7 @@ input[type="text"] {
 }
 
 .btn:hover {
-    background-color: #4a15e9;
+    background-color: #c5d210;
 }
 
 ul li {
@@ -68,18 +68,18 @@ ul li::before {
 
 ul li.checked {
     text-decoration: line-through;
-    color: #632fff;
+    color: red;
 }
 
 ul li.checked::before {
     content: "☑";
-    color: #632fff;
+    color: red;
 }
 
 ul li span {
     position: absolute;
     top: 1.8px;
     right: 5px;
-    color: rgb(227, 120, 26);
-    font-size: 2rem;
+    color: rgb(219, 89, 3);
+    font-size: 2.2rem;
 }
