--- a/TO DO LIST/style.css
+++ b/TO DO LIST/style.css
@@ -26,15 +26,15 @@ form {
 input[type="text"] {
     width: 70%;
     padding: 20px;
-    border: 6px solid #7CFC00;
+    border: 4px solid black;
     border-radius: 15px;
     font-size: 1rem;
     margin-left: 20px;
 }
 
 .btn {
-    background-color: rgb(172, 120, 232);
-    border: 4px solid #7CFC00;
+    background-color: #87CEFA;
+    border: 4px solid black;
     color: black;
     padding: 20px 30px;
     cursor: pointer;
@@ -43,7 +43,7 @@ input[type="text"] {
 }
 
 .btn:hover {
-    background-color: #c5d210;
+    background-color: #ADFF2F;
 }
 
 ul li {
@@ -55,15 +55,15 @@ ul li {
 }
 
 ul li::before {
-    content: "☐";
-    font-size: 25px;
+    content: "¤";
+    font-size: 33px;
     position: absolute;
     left: -1px;
     top: 4px;
 }
 
 #task-list {
-    padding: 0px 30px;
+    padding: 0px 40px;
 }
 
 ul li.checked {
@@ -72,7 +72,7 @@ ul li.checked {
 }
 
 ul li.checked::before {
-    content: "☑";
+    content: "◘";
     color: red;
 }
 
